--- a/history_style.css
+++ b/history_style.css
@@ -8,11 +8,16 @@
 	width: 90%;
 	margin: 0 auto;
 }
-
+h2{
+  background-color: #3f3f3f;
+}
 header {
   background: black;
 }
-
+body{
+  color: red;
+  background-color: black;
+}
 header::after {
   content: '';
   display: table;
@@ -122,7 +127,6 @@ ul{
 }
 .content_title{
   padding-top: 0;
-  color: red;
   text-align: center;
   padding-bottom: 40px;
 }
@@ -160,10 +164,12 @@ ul{
 .lebron_james{
  text-align: center;
  padding-top: 20px;
+ color: red;
 }
 .game_7{
   text-align: center;
   padding-top: 20px;
+  color: red;
 }
 /*styling for Trivia, plus animations for interactive parts*/
 .flex{
@@ -177,6 +183,7 @@ ul{
   height: 200px;
   perspective: 1000px;
   padding: 10px;
+
 }
 
 .flip-card-inner {
