--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ nav a:hover{
   background-color: black;
   text-decoration: underline;
   text-decoration-color: red;
-  text-decoration-thickness: 5px;
   padding-bottom: 40px;
 }
 
@@ -91,7 +90,7 @@ ul{
 	margin-bottom: 35px;
 	font-weight: 500;
 	position: relative;
-  font-family: GeoBrandBold,CenturyGothic,AppleGothic,Gill Sans,Gill Sans MT,sans-serif;
+  font-family: sans-serif;
 }
 
 .footer-col h4::before{
@@ -163,7 +162,7 @@ padding-top: 30px;
   font-style: italic;
 }
 .logo_box{
-  text-align: right;
+  text-align: center;
   max-height: 50%;
   background-color: black;
 }
