--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ ul{
 	left:0;
 	bottom: -10px;
 	height: 2px;
-	box-sizing: border-box;
 	width: 50px;
 }
 
@@ -171,8 +170,10 @@ padding-top: 30px;
   background-color: transparent;
   width: 300px;
   height: 300px;
-  perspective: 1000px;
-  padding-left: 10px;
+  perspective: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 .flip-card-inner {
   position: relative;
@@ -183,7 +184,6 @@ padding-top: 30px;
   transform-style: preserve-3d;
   box-shadow: black;
 }
-
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
@@ -226,5 +226,23 @@ padding-top: 30px;
   padding-bottom: 0;
   background-color: #753BBD;
 }
-.big_flex{
+/*The raptor div*/
+.row {
+  display: flex;
+}
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+.raptor{
+  margin: 10px;
+  padding: 10px;
+  list-style: bullets;
+}
+.raptor_li{
+  padding-top: 10px;
+}
+.raptor_box{
+  color: red;
+  background-color: black;
 }
