--- a/sucess_style.css
+++ b/sucess_style.css
@@ -3,12 +3,22 @@
   margin: 0;
   padding: 0;
 }
+h2{
+  background-color: #3f3f3f;
+}
+.padding_top_bottom{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
 /*working on header for page*/
 .header_box {
 	width: 90%;
 	margin: 0 auto;
 }
-
+body{
+  color: #A1A1A4;
+  background-color: black;
+}
 header {
   background: black;
 }
@@ -45,10 +55,13 @@ nav, ul, li, a{
   transition: all 0.5s ease;
 }
 nav a:hover{
-   color: #753BBD;
+   color: #A1A1A4;
 }
-
-
+h1{
+  text-align: center;
+  color: #A1A1A4;
+  background-color: #3f3f3f;
+}
 /*working on footer*/
 footer{
   background-color: black;
@@ -76,7 +89,7 @@ ul{
 	margin-bottom: 35px;
 	font-weight: 500;
 	position: relative;
-  font-family: GeoBrandBold,CenturyGothic,AppleGothic,Gill Sans,Gill Sans MT,sans-serif;
+  font-family: sans-serif;
 }
 
 .footer-col h4::before{
@@ -101,7 +114,7 @@ ul{
 /*animation for footer items*/
 .footer-col ul li a:hover{
 	text-decoration: underline;
-  color: #753BBD;
+  color: #A1A1A4;
 }
 .footer-col .social-links a{
 	display: inline-block;
@@ -116,7 +129,7 @@ ul{
 	transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover{
-	color: #753BBD;
+	color: #A1A1A4;
 	background-color: black;
 }
 .column {
@@ -131,11 +144,11 @@ ul{
 }
 .page_header_box{
   background-image: url("https://beta.ctvnews.ca/content/dam/ctvnews/images/2019/6/14/1_4466188.jpg?cache_timestamp=1560486877461");
-  background-position: 50%;
+  background-position: 50% 75%;
 }
 .page_header{
-  padding-top: 40px;
-  padding-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 160px;
   text-align: center;
 }
 /*working on what happened in 2019 explanation*/
@@ -145,7 +158,10 @@ ul{
   flex-direction: row;
   padding: 10px;
 }
+#title_1{
+  background-color: #3f3f3f;
+}
 .padding_10px{
   padding-right: 10px;
+  padding-left: 10px;
 }
-
