--- a/history_style.css
+++ b/history_style.css
@@ -135,7 +135,7 @@ ul{
   color: #B4975A;
 }
 .content_box{
-  background-image: url("https://images.daznservices.com/di/library/NBA_Global_CMS_image_storage/6/40/raptors-playoff-history-split-playingsurface_n5b12ecu9ikr14nuwi9wzrsvk.png?t=-1184703431&quality=80");
+  background-image: url("raptors_history.png");
   background-position:center top;
   background-repeat: no-repeat;
   background-size: cover;
