--- a/sucess_style.css
+++ b/sucess_style.css
@@ -143,7 +143,7 @@ ul{
   display: table;
 }
 .page_header_box{
-  background-image: url("https://beta.ctvnews.ca/content/dam/ctvnews/images/2019/6/14/1_4466188.jpg?cache_timestamp=1560486877461");
+  background-image: url("fame.jpg");
   background-position: 50% 75%;
 }
 .page_header{
