--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/*Brevan*/
+/*This is the styling for the main landing page of the website. It also contins any animations used in this page*/
+/*January 25th 2022*/
+/*TEJ20*/
 * {
   box-sizing: border-box;
   margin: 0;
