--- a/history_style.css
+++ b/history_style.css
@@ -4,9 +4,9 @@
   padding: 0;
 }
 p{
-  padding-left: 20px;
+  padding-left: 25%;
   padding-right: 10px;
-  max-width: 800px;
+  max-width: 75%;
 }
 /*working on header for page*/
 .header_box {
@@ -15,7 +15,7 @@ p{
 }
 h2{
   background-color: #3f3f3f;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 header {
   background: black;
