--- a/future_style.css
+++ b/future_style.css
@@ -1,3 +1,7 @@
+/*Brevan*/
+/*This is the styling for the future page, it also contains some animations for flip cards*/
+/*January 25th 2022*/
+/*TEJ20*/
 * {
   box-sizing: border-box;
   margin: 0;
