--- a/history_style.css
+++ b/history_style.css
@@ -1,3 +1,7 @@
+/*Brevan*/
+/*This is the styling for the history page*/
+/*January 25th 2022*/
+/*TEJ20*/
 * {
   box-sizing: border-box;
   margin: 0;
